--- a/views/admin/index.hbs
+++ b/views/admin/index.hbs
@@ -1,104 +1,4 @@
-<h1>Hola {{username}} </h1>
-
-<p>
-  Aquí podrás crear tus recetas de tragos favoritas de una manera fácil y
-  rápida.
-</p>
-<form action="/admin/create" class="formNewDrink">
-  <fieldset class="newRecipeFS on">
-    <legend>
-      Nombre
-    </legend>
-    <input
-      type="text"
-      name="recipeName"
-      id="recipeName"
-      placeholder="[Nombre de la receta]"
-      class="onlyInput"
-    />
-  </fieldset>
-  <fieldset class="newRecipeFS on">
-    <legend>
-      Origen
-    </legend>
-    <input
-      type="text"
-      name="recipeOrigin"
-      id="recipeOrigin"
-      placeholder="['Mexico' 'Francia' ...]"
-      class="onlyInput"
-    />
-  </fieldset>
-  <fieldset class="newRecipeFS on">
-    <legend>
-      Porciones (1 vaso = 200ml)
-    </legend>
-    <input
-      type="number"
-      name="recipePortions"
-      id="recipePortions"
-      placeholder="[Vasos]"
-      max="5"
-      min="1"
-      class="onlyInput"
-    />
-  </fieldset>
-  <fieldset class="newRecipeFS on">
-    <legend>
-      Ingredientes
-    </legend>
-    <div class="ingredientsArea" id="ingredientsArea">
-      <input
-        type="number"
-        name="recipeIngredientCant"
-        class="iCant"
-        placeholder="[#]"
-        max="10"
-        min="1"
-      />
-        <select class="iSelect">
-          <option>Onza/s</option>
-          <option>Mililitro/s</option>
-          <option>Vaso/s</option>
-          <option>Unidad/es</option>
-        </select>
-      <span> de </span>
-      <input
-        type="text"
-        name="recipeIngredient"
-        class="iName"
-        placeholder="[Ingrediente]"
-      />
-      <input
-        type="button"
-        value="+"
-        title="Agregar ingrediente"
-        class="addBtn"
-      />
-    </div>
-  </fieldset>
-  <fieldset class="newRecipeFS on">
-    <legend>
-      Pasos
-    </legend>
-    <div class="stepsArea" id="stepsArea">
-    <label for="step" class="sNumber">1.-</label>
-    <textarea
-      class="sValue"
-      placeholder="['Agregar el jengibre a...']"
-      name="step"
-    ></textarea>
-      <input type="button" value="+" title="Agregar paso" class="addBtn" />
-    
-    
-  </fieldset>
-  <fieldset class="newRecipeFS on">
-    <legend>
-      Imagen
-    </legend>
-    <input type="file" name="image" id="image" accept="image/png, image/jpeg" />
-    </div>
-    
-  </fieldset>
-</form>
-<script src="/javascripts/addRecipe.js"></script>
+<h1>heooeoeo</h1>
+<ul>
+  <a href="/admin/newRecipe"><li>Crear receta nueva</li></a>
+</ul>
