--- a/views/admin/newRecipe.hbs
+++ b/views/admin/newRecipe.hbs
@@ -14,7 +14,7 @@
       name="recipeName"
       id="recipeName"
       placeholder="[Nombre de la receta]"
-      class="onlyInput"
+      class="onlyInput input"
     />
   </fieldset>
   <fieldset class="newRecipeFS on">
@@ -26,7 +26,7 @@
       name="recipeOrigin"
       id="recipeOrigin"
       placeholder="['Mexico' 'Francia' ...]"
-      class="onlyInput"
+      class="onlyInput input"
     />
   </fieldset>
   <fieldset class="newRecipeFS on">
@@ -40,7 +40,7 @@
       placeholder="[Vasos]"
       max="5"
       min="1"
-      class="onlyInput"
+      class="onlyInput input"
     />
   </fieldset>
   <fieldset class="newRecipeFS on">
@@ -51,7 +51,7 @@
       <input
         type="number"
         name="recipeIngredientCant"
-        class="iCant"
+        class="iCant input"
         placeholder="[#]"
         max="10"
         min="1"
@@ -66,7 +66,7 @@
       <input
         type="text"
         name="recipeIngredient"
-        class="iName"
+        class="iName input"
         placeholder="[Ingrediente]"
       />
       <input
@@ -84,7 +84,7 @@
     <div class="stepsArea" id="stepsArea">
       <label for="step" class="sNumber">1.-</label>
       <textarea
-        class="sValue"
+        class="sValue input"
         placeholder="['Agregar el jengibre a...']"
         name="step"
       ></textarea>
